<resources>
    <string name="app_name">Schedule Meeting UI Layout</string>
    <string name="tue_22_december_2020">Tue - 22 December 2020</string>
    <string name="_11_30">11:30</string>
    <string name="nurpul">Nurpul</string>
    <string name="prateek">Prateek</string>
    <string name="prateek_shukla">Prateek Shukla</string>
    <string name="jeff_bezos">Jeff bezos</string>
    <string name="notify_people_on_slack">Notify People On Slack?</string>
</resources>