<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/editStyle"
        android:orientation="vertical">

        <TextView
            style="@style/editStyle"
            android:gravity="center"
            android:text="Schedule Meeting"
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_20" />

        <TextView
            style="@style/normalStyle"
            android:text="Name"
            android:textSize="@dimen/sp_20" />

        <EditText
            style="@style/normalStyle"
            android:hint="@string/nurpul"
            android:textColorHint="@color/black" />

        <LinearLayout
            style="@style/normalStyle"
            android:padding="@dimen/dp_5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/editStyle"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/date_bg"
                android:gravity="center"
                android:padding="@dimen/dp_20"
                android:text="@string/tue_22_december_2020"
                android:textStyle="bold" />

            <TextView
                style="@style/editStyle"
                android:layout_weight="2"
                android:background="@drawable/date_bg"
                android:gravity="center"
                android:padding="@dimen/dp_20"
                android:text="@string/_11_30"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            style="@style/editStyle"
            android:padding="0dp"
            android:text="People to Talk"
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/Name"
            style="@style/normalStyle"
            android:orientation="horizontal">

            <EditText
                style="@style/editStyle"
                android:hint="@string/prateek"
                android:textColorHint="@color/black" />

            <ImageView
                style="@style/wStyle"

                android:layout_alignParentEnd="true"
                android:padding="@dimen/dp_20"
                android:src="@drawable/ic_baseline_search_24" />

        </RelativeLayout>

        <LinearLayout style="@style/normalStyle">

            <ImageView
                style="@style/wStyle"

                android:padding="@dimen/dp_10"
                android:src="@drawable/prateek_shukla" />

            <ImageView
                style="@style/wStyle"

                android:padding="@dimen/dp_10"
                android:src="@drawable/jeff_bezos" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        style="@style/editStyle"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivPrateek"
            style="@style/wStyle"
            android:padding="@dimen/dp_5"
            android:src="@drawable/prateek_shukla" />

        <LinearLayout
            style="@style/wStyle"
            android:layout_gravity="center">

            <TextView
                style="@style/wStyle"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/prateek_shukla"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />


            <ImageView
                style="@style/normalStyle"
                android:src="@drawable/ic_vector" />

            <TextView
                style="@style/wStyle"
                android:layout_weight="1"
                android:text="         \@PratShukla" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/grey" />

    <LinearLayout
        style="@style/editStyle"
        android:orientation="horizontal">

        <ImageView
            style="@style/wStyle"
            android:padding="@dimen/dp_5"
            android:src="@drawable/jeff_bezos" />

        <LinearLayout
            style="@style/wStyle"
            android:layout_gravity="center">

            <TextView
                style="@style/wStyle"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/jeff_bezos"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />


            <ImageView
                style="@style/normalStyle"
                android:src="@drawable/ic_vector" />

            <TextView
                style="@style/wStyle"
                android:layout_weight="1"
                android:text="                        \@jefbeozz" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        style="@style/normalStyle"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <TextView
            style="@style/wStyle"
            android:text="@string/notify_people_on_slack"
            android:textSize="@dimen/sp_20" />

        <ImageView
            style="@style/wStyle"
            android:src="@drawable/ic_group" />
    </LinearLayout>

    <Button
        style="@style/normalStyle"
        android:gravity="center"
        android:text="Create Meeting" />


</LinearLayout>